# ddg-agent-payable-services

./: .gitignore  AGENTS.md  DISCOVERY.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SECURITY_AUDIT.md  glama.json  llms.txt  openapi.json  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-mcp-registry.yml  publish-mcp.yml  validate.yml
clients/typescript/: README.md  ddg.ts  package-lock.json  package.json  quickstart.ts  tsconfig.json
deploy/cloudflare/: ddg-agent-services-mcp-ingress.example.yml
deploy/systemd/: ddg-agent-services-mcp.service
docs/: agent-catalog.json  agent-distribution-action-plan.md  agent-distribution-targets.json  agent-skills-index.json  agent-status.json  agents.json  ai-discovery.json  api-catalog.linkset.json  checkout-conformance.json  cybersecurity-services.json  ddg-agent-pricing.json  ddg-agent-status.json  ddg.md  direct_crypto_addresses.public.json  llms.txt  mcp-production-readiness.md  mcp-security-audit-2026-06-23.md  openapi.json  pricing.json  quickstart.md  x402-bazaar-readiness.json  x402-bazaar-readiness.md
docs/agent-skills/: agent-discovery-repair-pack.json  agent-payment-readiness-audit.json  agent-status-and-receipt-tools.json  browser-proof-artifact.json  buyer-agent-smoke-probe.json  ddg-agent-services.json  mcp-tool-security-audit.json  model-artifact-order.json  payment-rail-activation-proof.json  prompt-injection-ci.json  repo-context-pack.json
examples/: bazaar_list.py  buyer_agent_client.py  curl-smoke.sh  quickstart_python.py
integrations/: README.md
integrations/crewai/: example.py
integrations/langchain/: example.py
integrations/litellm/: README.md  ddg_litellm.py
mcp/: README.md  ddg-agent-swarm-mcp-design.md  ddg_agent_services_mcp_server.py  package-metadata.json  server.json  server.remote-template.json
schemas/: agent-service.v1.json  payment-challenge.v1.json  receipt.v1.json
scripts/: agent_checkout_conformance_probe.py  smoke_mcp_server.py  validate_submission_sync.py
src/ddg_agent_services_mcp/: __init__.py  server.py  tools.py
submissions/mcp-aggregators/: listing-payloads.md  mcp.so-payload.json  smithery-submission-packet.md
submissions/mcp-registry/: ddg-agent-services-publish.md
submissions/x402-bazaar/: CDP_BAZAAR_INTEGRATION_GUIDE.md  settlement-metadata.json
submissions/x402-ecosystem/: awesome-x402-listing.md  x402-org-listing-request.md
submissions/x402scan/: ddg-agent-services-registration.md
tests/: test_mcp_security.py  test_submission_sync.py
